--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ a:hover{
 	margin-left: 98px;
 	/*margin-right: 98px;*/
 	background-position: center;
-	background-size: cover;
+	/*background-size: cover;*/
 	position: relative;
 	background-repeat: no-repeat;
 }
