--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,12 @@
 	-webkit-box-align: center;
 	    -ms-flex-align: center;
 	        align-items: center;
+	        /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#c5deea+3,c5deea+18,8abbd7+49,c5deea+87 */
+background: rgb(197,222,234); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(197,222,234,1) 3%, rgba(197,222,234,1) 18%, rgba(138,187,215,1) 49%, rgba(197,222,234,1) 87%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  rgba(197,222,234,1) 3%,rgba(197,222,234,1) 18%,rgba(138,187,215,1) 49%,rgba(197,222,234,1) 87%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  rgba(197,222,234,1) 3%,rgba(197,222,234,1) 18%,rgba(138,187,215,1) 49%,rgba(197,222,234,1) 87%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c5deea', endColorstr='#c5deea',GradientType=0 ); /* IE6-9 */
 }
 a{
 	padding-right: 24px;
@@ -25,6 +31,7 @@ a{
 }
 a:hover{
 	font-weight: bold;
+	text-shadow: 2px 2px 10px purple;
 }
 .html-logo{
 	width: 198px;
@@ -80,6 +87,13 @@ a:hover{
 	-webkit-box-pack: center;
 	    -ms-flex-pack: center;
 	        justify-content: center;
+	        /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#c5deea+3,c5deea+18,8abbd7+49,c5deea+87 */
+background: rgb(197,222,234); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(197,222,234,1) 3%, rgba(197,222,234,1) 18%, rgba(138,187,215,1) 49%, rgba(197,222,234,1) 87%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  rgba(197,222,234,1) 3%,rgba(197,222,234,1) 18%,rgba(138,187,215,1) 49%,rgba(197,222,234,1) 87%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  rgba(197,222,234,1) 3%,rgba(197,222,234,1) 18%,rgba(138,187,215,1) 49%,rgba(197,222,234,1) 87%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c5deea', endColorstr='#c5deea',GradientType=0 ); /* IE6-9 */
+
 }
 .bg{
 	background-image: url(../img/bg.jpg);
@@ -152,7 +166,18 @@ h1{
 	padding-top: 36px;
 	padding-bottom: 80px;
 }
-.white-box1{
+.video1{
+	width: 570px;
+	height: 320px;
+	margin-right: 35px;
+	margin-left: 98px;
+}
+.video2{
+	width: 570px;
+	height: 320px;
+	margin-right: 98px;
+}
+/*.white-box1{
 	height: 320px;
 	width: 570px;
 	background-color: white;
@@ -174,7 +199,7 @@ h1{
 .txt{
 	padding-top: 160px;
 	font-size: 16.85px;
-}
+}*/
 
 
 
@@ -207,7 +232,12 @@ h1{
 	-webkit-box-pack: center;
 	    -ms-flex-pack: center;
 	        justify-content: center;
-	padding-right: 35px;
+	margin-right: 35px;
+	transition: 1s;
+}
+.ph:hover{
+	box-shadow: 5px 10px 10px purple;
+	border: 2px solid black;
 }
 .ph1{
 	display: -webkit-box;
@@ -220,6 +250,11 @@ h1{
 	-webkit-box-pack: center;
 	    -ms-flex-pack: center;
 	        justify-content: center;
+	        transition: 1s;
+}
+.ph1:hover{
+	box-shadow: 5px 10px 10px purple;
+	border: 2px solid black;
 }
 .p2{
 	font-size: 22px;
